tests/typing/errors/partial_pattern_match/partial_3.zf


data t :=
  | A
  | B
  | C int.

val x : t.

def foo : int :=
  match x with
  | B -> 1
  | C y -> y
  end.

